--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
 </body>
 
 <!-- Swipper JS -->
-<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+<script type="module" src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <!-- JavaScript -->
-<script src="js/script.js"></script>
+<script type="module" src="js/script.js"></script>
 
 </html>
