--- a/index.html
+++ b/index.html
@@ -99,42 +99,77 @@
                         </div>
 
                     </div>
-                </div>            
+                </div>
                 <div class="swiper-button-next swiper-navBtn"></div>
                 <div class="swiper-button-prev swiper-navBtn"></div>
                 <div class="swiper-pagination"></div>
             </div>
             <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         </section>
-        <section class="marcas">
-            <h1 class="titulo-2">Algunas de las marcas que distribuimos</h1>
-            <div class="contenedor-marcas">
-                <div class="contenedor1">
-                    <div class="contenedor1-1">
-                        <img class="imgs-marcas" src="imgs/logo-hp2.png" alt="logo-HP">
-                        <img class="imgs-marcas" src="imgs/logo-Samsung.png" alt="logo-Samsung">
+        <section class="section-brands">
+            <div class="slider">
+                <div class="slide-track">
+                    <div class="slide">
+                        <img src="imgs/logo-Samsung.png" class="border border-gray-300 shadow-md" alt="">
                     </div>
-                    <div class="contenedor1-1">
-                        <img class="imgs-marcas" src="imgs/LOGO-EPSON2.jpg" alt="logo-Epson">
-                        <img class="imgs-marcas" src="imgs/logo-brother.jpg" alt="logo-Brother">
+                    <div class="slide">
+                        <img src="imgs/logo-canon5.png" class="border border-gray-300 shadow-md" alt="">
                     </div>
-                </div>
-                <div class="contenedor2">
-                    <div class="contenedor2-1">
-                        <img class="imgs-marcas-2" src="imgs/logo-canon5.png" alt="logo-Canon">
-                        <img class="imgs-marcas-2" src="imgs/logo-lexmark3.png" alt="logo-lexmark">
+                    <div class="slide">
+                        <img src="imgs/logo-brother.jpg" class="border border-gray-300 shadow-md" alt="">
                     </div>
-                    <div class="contenedor2-1">
-                        <img class="imgs-marcas-2" src="imgs/logo-ricoh2.png" alt="logo-ricoh">
-                        <img class="imgs-marcas-2" src="imgs/logo-kyocera.jpg" alt="logo-kyocera">
+                    <div class="slide">
+                        <img src="imgs/logo-lexmark3.png" class="border border-gray-300 shadow-md" alt="">
                     </div>
-                    <img class="imgs-marcas-2-1" src="imgs/LOGO-XEROX2.jpg" alt="logo-xerox">
-                </div>
+                    <div class="slide">
+                        <img src="imgs/logo-hp2.png" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/logo-ricoh2.png" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/logo-kyocera.jpg" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/LOGO-EPSON2.jpg" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/LOGO-XEROX2.jpg" class="border border-gray-300 shadow-md" alt="logo-xerox">
+                    </div>
 
+                    <div class="slide">
+                        <img src="imgs/logo-Samsung.png" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/logo-canon5.png" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/logo-brother.jpg" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/logo-lexmark3.png" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/logo-hp2.png" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/logo-ricoh2.png" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/logo-kyocera.jpg" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/LOGO-EPSON2.jpg" class="border border-gray-300 shadow-md" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="imgs/LOGO-XEROX2.jpg" class="border border-gray-300 shadow-md" alt="logo-xerox">
+                    </div>
+
+
+                </div>
             </div>
-
         </section>
-        <section id="sobre-productos">
+        <!-- <section id="sobre-productos">
             <h2 class="titulo-2">Categorías con las que trabajamos</h2>
             <div class="contenedor-sobre-productos">
                 <div class="categoria">
@@ -167,8 +202,12 @@
                     <div class="sub-categoria">
                         <h2 class="titulo-categoria">Tóner para fotocopiadoras</h2>
                         <hr class="linea-categoria">
-                        <p class="parrafo-categoria">Los Tóner que manejamos para impresoras marcas Ricoh y Kyosera, es un polvo hecho de plásticos granulados que suele estar almacenado en un solo cartucho, y que permite un mayor grado de control, precisión y rendimiento de tiempo al momento de imprimir.</p>
-                        <a class="link-categoria" href="./index2.html#toner-para-fotocopiadoras1" target="_blank">Consultar
+                        <p class="parrafo-categoria">Los Tóner que manejamos para impresoras marcas Ricoh y Kyosera, es
+                            un polvo hecho de plásticos granulados que suele estar almacenado en un solo cartucho, y que
+                            permite un mayor grado de control, precisión y rendimiento de tiempo al momento de imprimir.
+                        </p>
+                        <a class="link-categoria" href="./index2.html#toner-para-fotocopiadoras1"
+                            target="_blank">Consultar
                             el catálogo de Tóner para fotocopiadoras</a>
                     </div>
                 </div>
@@ -177,7 +216,9 @@
                     <div class="sub-categoria">
                         <h2 class="titulo-categoria">Botellas de tintas</h2>
                         <hr class="linea-categoria">
-                        <p class="parrafo-categoria">Las Tintas son líquidas, utilizada para escribir o imprimir. Su funcionamiento principal es la superficie para obtener un texto, imagen o patrón, con un alto rendimiento.</p>
+                        <p class="parrafo-categoria">Las Tintas son líquidas, utilizada para escribir o imprimir. Su
+                            funcionamiento principal es la superficie para obtener un texto, imagen o patrón, con un
+                            alto rendimiento.</p>
                         <a class="link-categoria" href="./index2.html#botellas-de-tinta1" target="_blank">Consultar el
                             catálogo de Botellas de tintas</a>
                     </div>
@@ -187,7 +228,10 @@
                     <div class="sub-categoria">
                         <h2 class="titulo-categoria">Cintas de impresión</h2>
                         <hr class="linea-categoria">
-                        <p class="parrafo-categoria">Se utilizan para imprimir en una etiqueta de papel estucado diseñada específicamente para la impresión por transferencia térmica. Estas imágenes no son para una durabilidad duradera, pero permanecen intactas si se encuentran en un entorno mínimamente abrasivo o químicamente neutro.</p>
+                        <p class="parrafo-categoria">Se utilizan para imprimir en una etiqueta de papel estucado
+                            diseñada específicamente para la impresión por transferencia térmica. Estas imágenes no son
+                            para una durabilidad duradera, pero permanecen intactas si se encuentran en un entorno
+                            mínimamente abrasivo o químicamente neutro.</p>
                         <a class="link-categoria" href="./index2.html#cintas-de-impresion1" target="_blank">Consultar el
                             catálogo de Cintas de impresión</a>
                     </div>
@@ -198,12 +242,59 @@
                         <h2 class="titulo-categoria">Para hogares</h2>
                         <hr class="linea-categoria">
                         <p class="parrafo-categoria">Manejamos suministros para todo tipo de clientes.</p>
-                        <a class="link-categoria" href="./index2.html#cartuchos-3" target="_blank">Consultar el catálogo de
+                        <a class="link-categoria" href="./index2.html#cartuchos-3" target="_blank">Consultar el catálogo
+                            de
                             hogar</a>
                     </div>
                 </div>
             </div>
+        </section> -->
+        <section id="about-products">
+            <div class="background-products">
+                <h2 class="title-about-products">Categorías con las que trabajamos</h2>
+                <div class="container-cards">
+                    <div class="card">
+                        <img src="./imgs/cartucho-about-product.jpg" class="card-img" alt="">
+                        <div class="card-body">
+                            <h2 class="card-title">Cartuchos</h2>
+                            <p class="card-info">Los cartuchos que manejamos en varias marcas que sirven para
+                                suministrar las impresoras como impresora multifuncional HP, Epson, Lexmark y Brother
+                                Industries..</p>
+                            <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo cartuchos</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./imgs/toner-about-product.jpg" class="card-img" alt="">
+                        <div class="card-body">
+                            <h2 class="card-title">Tóners</h2>
+                            <p class="card-info">Son compuestos un polvo hecho de plásticos granulados esta
+                                almacenado en un solo cartucho, y que permite un mayor grado de control, precisión y
+                                rendimiento de tiempo al momento de imprimir.</p>
+                            <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo tóner</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./imgs/fotocopiadora-about-products.jpeg" class="card-img" alt="">
+                        <div class="card-body">
+                            <h2 class="card-title">Botellas de tinta</h2>
+                            <p class="card-info">Las Tintas son líquidas, utilizada para escribir o imprimir. Su
+                                funcionamiento principal es la superficie para obtener un texto, imagen o patrón, con un
+                                alto rendimiento.</p>
+                            <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo botellas</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./imgs/suministros-about-products.jpg" class="card-img" alt="">
+                        <div class="card-body">
+                            <h2 class="card-title">Descubre más categorias</h2>
+                            <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Categorias</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </section>
+
     </main>
     <footer id="footer">
         <div class="contenedor-pie">
@@ -219,7 +310,8 @@
                 <h3 class="titulo-pie">Conéctate con nosotros</h3>
                 <div class="iconos-pie">
                     <i class="fa-solid fa-envelope"></i>
-                    <a href="mailto:comercial.tonerink@gmail.com" target="_blank" class="parrafos-pie" >comercial.tonerink@gmail.com</a>
+                    <a href="mailto:comercial.tonerink@gmail.com" target="_blank"
+                        class="parrafos-pie">comercial.tonerink@gmail.com</a>
                 </div>
                 <div class="iconos-pie">
                     <i class="fa-brands fa-whatsapp"></i>
@@ -230,7 +322,7 @@
                     <a class="parrafos-pie" href="tel:+573187317450">+57 318-731-74-50</a>
                 </div>
 
-                <hr class="linea-footer"/> 
+                <hr class="linea-footer" />
             </div>
             <div class="sobre-nosotros-footer">
                 <h3 class="titulo-pie">Sobre nosotros</h3>
