--- a/index.html
+++ b/index.html
@@ -250,8 +250,7 @@
             </div>
         </section> -->
         <section id="about-products">
-            <div class="background-products">
-                <h2 class="title-about-products">Categorías con las que trabajamos</h2>
+                <h2 class="titulo-2">Categorías con las que trabajamos</h2>
                 <div class="container-cards">
                     <div class="card">
                         <img src="./imgs/cartucho-about-product.jpg" class="card-img" alt="">
@@ -292,7 +291,6 @@
                     </div>
 
                 </div>
-            </div>
         </section>
 
     </main>
