--- a/index2.html
+++ b/index2.html
@@ -220,6 +220,7 @@
         </div>
     </div>
 <script type="module" src="./js/script.js"></script>
+<script type="module" src="./js/filtro.js"></script>
 </body>
 
 </html>
